# PX4-Autopilot

./: .gitmodules  CMakeLists.txt  Makefile  package.xml
.ci/: Jenkinsfile-hardware
ROMFS/px4fmu_common/init.d/: rc.dance_led  rc.interface  rc.mc_defaults  rcS
ROMFS/px4fmu_common/init.d-posix/: rcS
Tools/astyle/: files_to_check_code_style.sh
Tools/setup/: arch.sh  ubuntu.sh
boards/airmind/mindpx-v2/: default.cmake
boards/atl/mantis-edu/: default.cmake
boards/av/x-v1/: default.cmake  default.px4board
boards/beaglebone/blue/: default.cmake
boards/bitcraze/crazyflie/: default.cmake
boards/bitcraze/crazyflie21/: default.cmake
boards/cuav/nora/: default.cmake  default.px4board  test.cmake
boards/cuav/x7pro/: default.cmake  default.px4board  test.cmake
boards/cubepilot/cubeorange/: default.cmake  default.px4board  test.cmake
boards/cubepilot/cubeyellow/: default.cmake  test.cmake
boards/emlid/navio2/: default.cmake
boards/holybro/durandal-v1/: default.cmake  default.px4board  test.cmake
boards/holybro/kakutef7/: default.cmake  default.px4board
boards/holybro/pix32v5/: default.cmake
boards/modalai/fc-v1/: default.cmake  rtps.cmake
boards/modalai/fc-v2/: default.px4board
cmake/: kconfig.cmake
msg/: CMakeLists.txt  follow_target.msg  follow_target_estimator.msg  follow_target_status.msg  manual_control_setpoint.msg  sensor_gps.msg  timesync_status.msg  vehicle_command.msg  vehicle_status.msg
msg/tools/: uorb_pascal_message_substitution.py  uorb_rtps_message_ids.yaml
src/drivers/: drv_hrt.h
src/lib/: CMakeLists.txt
(+391 files in other folders)
